force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Connection_Status__c</fullName>
    <formula>IF(mcdm_15__IsAuthorized__c,HYPERLINK(&quot;/lightning/setup/NamedCredential/page?address=%2F&quot; &amp; mcdm_15__NamedCredentialId__c, $Label.mcdm_15__connectedFormulaMessage), HYPERLINK(&quot;/lightning/setup/NamedCredential/page?address=%2F&quot; &amp; mcdm_15__NamedCredentialId__c, $Label.mcdm_15__completeLogInMessage))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connection Status</label>
    <type>Text</type>
</CustomField>