force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__TSEMigrationLegacyId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__TSEMigrationLegacyId__c</fullName>
    <description>The ID of the legacy auth&apos;d Linked Business Unit associated with this Linked Business Unit</description>
    <label>TSE Migration Legacy Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>