force-app/main/default/objects/mcdm_15__LinkedBusinessUnit__c/fields/mcdm_15__TSEMigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__TSEMigrationStatus__c</fullName>
    <description>The tse migration status associated with this Linked Business Unit</description>
    <label>-</label>
    <length>255</length>
    <type>Text</type>
</CustomField>